# pixelengine

./: CMakeLists.txt  CopyFile.cmake  README.md  TODO.txt
.github/workflows/: cmake.yml
PixelEngine/: PixelEngine.cpp  PixelEngine.h
glad/: CMakeLists.txt
glad/include/glad/: gl.h  glx.h
glad/src/: gl.c
include/: Action.h  Cell.h  CellRenderer.h  GameObject.h  KeyboardHandler.h  MouseHandler.h  PixelEngine.h  Player.h  RenderTest.h  Renderer.h  ResourceManager.h  SpriteRenderer.h  main.h  shader.h  texture.h  transform.h
resources/shaders/: cell.frag  cell.vs
src/: CMakeLists.txt  Cell.cpp  GameObject.cpp  PixelEngine.cpp  PixelEngine.h  Player.cpp  RenderTest.cpp  ResourceManager.cpp  main.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_widgets.cpp
src/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/input/: Action.cpp  KeyboardHandler.cpp  MouseHandler.cpp
src/shader/: shader.cpp
src/texture/: CellRenderer.cpp  SpriteRenderer.cpp  texture.cpp
